@@ -185,7 +185,7 @@ public class ClassLoadInvoker extends ShellSnippetsInvoker {
                 anyTypeSymbol = runFunctionType.returnTypeDescriptor().orElseThrow();
             }
         }
-        JBallerinaBackend.from(compilation, JvmTarget.JAVA_17);
+        JBallerinaBackend.from(compilation, JvmTarget.JAVA_21);
         this.initialized.set(true);
         addDebugDiagnostic("Added initial identifiers: " + initialIdentifiers);
     }
@@ -227,16 +227,14 @@ public class ClassLoadInvoker extends ShellSnippetsInvoker {
         // Others are processed later.
         for (Snippet newSnippet : newSnippets) {
 
-            if (newSnippet instanceof ImportDeclarationSnippet) {
-                processImport((ImportDeclarationSnippet) newSnippet);
+            if (newSnippet instanceof ImportDeclarationSnippet importSnippet) {
+                processImport(importSnippet);
 
-            } else if (newSnippet instanceof VariableDeclarationSnippet) {
-                VariableDeclarationSnippet varDclnSnippet = (VariableDeclarationSnippet) newSnippet;
+            } else if (newSnippet instanceof VariableDeclarationSnippet varDclnSnippet) {
                 variableNames.addAll(varDclnSnippet.names());
                 variableDeclarations.put(varDclnSnippet, varDclnSnippet.names());
 
-            } else if (newSnippet instanceof ModuleMemberDeclarationSnippet) {
-                ModuleMemberDeclarationSnippet moduleDclnSnippet = (ModuleMemberDeclarationSnippet) newSnippet;
+            } else if (newSnippet instanceof ModuleMemberDeclarationSnippet moduleDclnSnippet) {
                 Identifier moduleDeclarationName = moduleDclnSnippet.name();
                 moduleDeclarations.put(moduleDeclarationName, moduleDclnSnippet);
                 availableModuleDeclarations.put(moduleDeclarationName, moduleDclnSnippet);
@@ -244,8 +242,8 @@ public class ClassLoadInvoker extends ShellSnippetsInvoker {
                         .map(Identifier::new).collect(Collectors.toSet());
                 newImports.put(moduleDeclarationName, usedPrefixes);
 
-            } else if (newSnippet instanceof ExecutableSnippet) {
-                executableSnippets.add((ExecutableSnippet) newSnippet);
+            } else if (newSnippet instanceof ExecutableSnippet executableSnippet) {
+                executableSnippets.add(executableSnippet);
 
             } else {
                 throw new UnsupportedOperationException("Unimplemented snippet category.");
@@ -560,7 +558,7 @@ public class ClassLoadInvoker extends ShellSnippetsInvoker {
         return compilation.getSemanticModel(moduleId).moduleSymbols().stream()
                 .filter(s -> s instanceof VariableSymbol || s instanceof FunctionSymbol)
                 .map(GlobalVariableSymbol::fromSymbol)
-                .collect(Collectors.toList());
+                .toList();
     }
 
     /**
