@@ -52,7 +52,6 @@ import java.nio.file.FileSystem;
 import java.nio.file.FileSystems;
 import java.nio.file.Files;
 import java.nio.file.Path;
-import java.nio.file.Paths;
 import java.nio.file.StandardCopyOption;
 import java.security.DigestInputStream;
 import java.security.MessageDigest;
@@ -60,6 +59,7 @@ import java.security.NoSuchAlgorithmException;
 import java.util.HashMap;
 import java.util.List;
 import java.util.Optional;
+import java.util.stream.Stream;
 
 import static org.ballerinalang.central.client.CentralClientConstants.APPLICATION_JSON;
 import static org.ballerinalang.central.client.CentralClientConstants.BALLERINA_DEV_CENTRAL;
@@ -78,7 +78,7 @@ import static org.ballerinalang.central.client.CentralClientConstants.UPDATE_INT
 /**
  * Utils class for this package.
  */
-public class Utils {
+public final class Utils {
 
     private static final int BUFFER_SIZE = 1024;
     public static final String DEPRECATED_META_FILE_NAME = "deprecated.txt";
@@ -146,24 +146,30 @@ public class Utils {
         // <user.home>.ballerina/bala_cache/<org-name>/<pkg-name>/<pkg-version>
 
         try {
-            if (Files.isDirectory(balaCacheWithPkgPath) && Files.list(balaCacheWithPkgPath).findAny().isPresent()) {
-                // update the existing deprecation details
-                Path deprecatedFilePath = balaCacheWithPkgPath.resolve(DEPRECATED_META_FILE_NAME);
-                if (deprecatedFilePath.toFile().exists() && deprecationMsg == null) {
-                    // delete deprecated file if it exists
-                    Files.delete(deprecatedFilePath);
-                } else if (deprecationMsg != null) {
-                    // write deprecation details to the file
-                    try (BufferedWriter writer = new BufferedWriter(new FileWriter(deprecatedFilePath.toFile(),
-                            Charset.defaultCharset()))) {
-                        writer.write(deprecationMsg);
-                    }
+            if (Files.isDirectory(balaCacheWithPkgPath)) {
+                boolean hasChildren;
+                try (Stream<Path> paths = Files.list(balaCacheWithPkgPath)) {
+                    hasChildren = paths.findAny().isPresent();
                 }
+                if (hasChildren) {
+                    // update the existing deprecation details
+                    Path deprecatedFilePath = balaCacheWithPkgPath.resolve(DEPRECATED_META_FILE_NAME);
+                    if (deprecatedFilePath.toFile().exists() && deprecationMsg == null) {
+                        // delete deprecated file if it exists
+                        Files.delete(deprecatedFilePath);
+                    } else if (deprecationMsg != null) {
+                        // write deprecation details to the file
+                        try (BufferedWriter writer = new BufferedWriter(new FileWriter(deprecatedFilePath.toFile(),
+                                Charset.defaultCharset()))) {
+                            writer.write(deprecationMsg);
+                        }
+                    }
 
-                downloadBody.ifPresent(ResponseBody::close);
-                throw new PackageAlreadyExistsException(
-                        logFormatter.formatLog("package already exists in the home repository: " +
-                                balaCacheWithPkgPath.toString()), validPkgVersion);
+                    downloadBody.ifPresent(ResponseBody::close);
+                    throw new PackageAlreadyExistsException(
+                            logFormatter.formatLog("package already exists in the home repository: " +
+                                    balaCacheWithPkgPath.toString()), validPkgVersion);
+                }
             }
         } catch (IOException e) {
             downloadBody.ifPresent(ResponseBody::close);
@@ -309,7 +315,7 @@ public class Utils {
             LogFormatter logFormatter) throws CentralClientException {
         if (isNightlyBuild) {
             // If its a nightly build tag the file as a module from nightly
-            Path nightlyBuildMetaFile = Paths.get(balaCacheWithPkgPath.toString(), "nightly.build");
+            Path nightlyBuildMetaFile = Path.of(balaCacheWithPkgPath.toString(), "nightly.build");
             if (!nightlyBuildMetaFile.toFile().exists()) {
                 createMetaFile(nightlyBuildMetaFile, logFormatter, "error occurred while creating nightly.build file.");
             }
@@ -327,7 +333,7 @@ public class Utils {
             LogFormatter logFormatter) throws CentralClientException {
         if (deprecateMsg != null) {
             // If its a deprecated package tag a file to denote as deprecated
-            Path deprecateMsgFile = Paths.get(balaCacheWithPkgPath.toString(), DEPRECATED_META_FILE_NAME);
+            Path deprecateMsgFile = Path.of(balaCacheWithPkgPath.toString(), DEPRECATED_META_FILE_NAME);
             if (!deprecateMsgFile.toFile().exists()) {
                 createMetaFile(deprecateMsgFile, logFormatter,
                         "error occurred while creating the file '" + DEPRECATED_META_FILE_NAME + "'");
@@ -419,8 +425,7 @@ public class Utils {
      * @return converted list of strings
      */
     static List<String> getAsList(String arrayString) {
-        return new Gson().fromJson(arrayString, new TypeToken<List<String>>() {
-        }.getType());
+        return new Gson().fromJson(arrayString, new TypeToken<>() { });
     }
 
     /**
@@ -459,7 +464,11 @@ public class Utils {
 
         try (FileSystem zipFileSystem = FileSystems.newFileSystem(zipURI, new HashMap<>())) {
             Path packageRoot = zipFileSystem.getPath("/");
-            List<Path> paths = Files.walk(packageRoot).filter(path -> path != packageRoot).toList();
+            List<Path> paths;
+            try (Stream<Path> pathStream = Files.walk(packageRoot)) {
+                paths = pathStream.filter(path -> path != packageRoot).toList();
+            }
+
             for (Path path : paths) {
                 Path destPath = balaFileDestPath.resolve(packageRoot.relativize(path).toString());
                 // Handle overwriting existing bala
@@ -584,7 +593,7 @@ public class Utils {
      * A listener interface that allows tracking byte writing.
      */
     public interface ProgressListener {
-        void onRequestProgress(long bytesWritten, long contentLength) throws IOException;
+        void onRequestProgress(long bytesWritten, long contentLength);
     }
 
     /**
