@@ -49,7 +49,6 @@ import java.io.IOException;
 import java.nio.file.AccessDeniedException;
 import java.nio.file.Files;
 import java.nio.file.Path;
-import java.nio.file.Paths;
 import java.util.ArrayList;
 import java.util.Arrays;
 import java.util.List;
@@ -67,7 +66,7 @@ import static org.mockito.Mockito.when;
  * @since 2.0.0
  */
 public class TestBalaWriter {
-    private static final Path RESOURCE_DIRECTORY = Paths.get("src", "test", "resources");
+    private static final Path RESOURCE_DIRECTORY = Path.of("src", "test", "resources");
     private static final Path BALA_WRITER_RESOURCES = RESOURCE_DIRECTORY.resolve("balawriter");
     private static final String PACKAGE_PATH = "packagePath";
     private Path tmpDir;
@@ -77,7 +76,7 @@ public class TestBalaWriter {
     public void setUp() throws IOException {
         this.tmpDir = Files.createTempDirectory("b7a-bala-writer-test-" + System.nanoTime());
         this.balaExportPath = this.tmpDir.resolve("tmpBalaDir");
-        Files.createDirectory(Paths.get(String.valueOf(this.balaExportPath)));
+        Files.createDirectory(Path.of(String.valueOf(this.balaExportPath)));
     }
 
     @Test
@@ -95,12 +94,12 @@ public class TestBalaWriter {
         Target target = new Target(project.sourceRoot());
         Path balaPath = target.getBalaPath();
         // invoke write bala method
-        JBallerinaBackend jBallerinaBackend = JBallerinaBackend.from(packageCompilation, JvmTarget.JAVA_17);
+        JBallerinaBackend jBallerinaBackend = JBallerinaBackend.from(packageCompilation, JvmTarget.JAVA_21);
         EmitResult emitResult = jBallerinaBackend.emit(JBallerinaBackend.OutputType.BALA, balaPath);
         Assert.assertTrue(emitResult.successful());
 
         // unzip bala
-        TestUtils.unzip(String.valueOf(balaPath.resolve("foo-winery-java17-0.1.0.bala")),
+        TestUtils.unzip(String.valueOf(balaPath.resolve("foo-winery-java21-0.1.0.bala")),
                         String.valueOf(balaExportPath));
 
         // bala.json
@@ -149,14 +148,14 @@ public class TestBalaWriter {
 
             Assert.assertEquals(packageJson.getVisibility(), "private");
 
-            Assert.assertEquals(packageJson.getPlatform(), "java17");
+            Assert.assertEquals(packageJson.getPlatform(), JvmTarget.JAVA_21.code());
             Assert.assertEquals(packageJson.getPlatformDependencies().size(), 1);
 
             Assert.assertEquals(packageJson.getBallerinaVersion(), RepoUtils.getBallerinaShortVersion());
             Assert.assertEquals(packageJson.getImplementationVendor(), "WSO2");
             Assert.assertEquals(packageJson.getLanguageSpecVersion(), RepoUtils.getBallerinaSpecVersion());
 
-            Assert.assertEquals(Paths.get(packageJson.getIcon()), Paths.get("docs/samplePng01.png"));
+            Assert.assertEquals(Path.of(packageJson.getIcon()), Path.of("docs/samplePng01.png"));
             Assert.assertTrue(balaExportPath.resolve(packageJson.getIcon()).toFile().exists());
         }
 
@@ -219,13 +218,13 @@ public class TestBalaWriter {
         Assert.assertTrue(nonDefaultModuleIncludeImageFile.toFile().exists());
 
         // package resources
-        Assert.assertTrue(balaExportPath.resolve(Paths.get("resources", "main.json")).toFile().exists());
+        Assert.assertTrue(balaExportPath.resolve(Path.of("resources", "main.json")).toFile().exists());
         // module sources
         // default module
         Path defaultModuleSrcPath = balaExportPath.resolve("modules").resolve("winery");
         Assert.assertTrue(defaultModuleSrcPath.toFile().exists());
-        Assert.assertTrue(defaultModuleSrcPath.resolve(Paths.get("main.bal")).toFile().exists());
-        Assert.assertTrue(defaultModuleSrcPath.resolve(Paths.get("utils.bal")).toFile().exists());
+        Assert.assertTrue(defaultModuleSrcPath.resolve(Path.of("main.bal")).toFile().exists());
+        Assert.assertTrue(defaultModuleSrcPath.resolve(Path.of("utils.bal")).toFile().exists());
         Assert.assertFalse(defaultModuleSrcPath.resolve("modules").toFile().exists());
         Assert.assertFalse(defaultModuleSrcPath.resolve("tests").toFile().exists());
         Assert.assertFalse(defaultModuleSrcPath.resolve("targets").toFile().exists());
@@ -239,12 +238,12 @@ public class TestBalaWriter {
         Assert.assertFalse(storageModuleSrcPath.resolve("Module.md").toFile().exists());
 
         // Check if platform dependencies exists
-        Path platformDependancy = balaExportPath.resolve("platform").resolve("java17")
+        Path platformDependancy = balaExportPath.resolve("platform").resolve(JvmTarget.JAVA_21.code())
                 .resolve("ballerina-io-1.0.0-java.txt");
         Assert.assertTrue(platformDependancy.toFile().exists());
 
         // Check if test scoped platform dependencies not exists
-        Path testScopePlatformDependancy = balaExportPath.resolve("platform").resolve("java17")
+        Path testScopePlatformDependancy = balaExportPath.resolve("platform").resolve(JvmTarget.JAVA_21.code())
                 .resolve("ballerina-io-1.2.0-java.txt");
         Assert.assertFalse(testScopePlatformDependancy.toFile().exists());
 
@@ -304,7 +303,7 @@ public class TestBalaWriter {
         PackageCompilation packageCompilation = project.currentPackage().getCompilation();
         Target target = new Target(project.sourceRoot());
 
-        JBallerinaBackend jBallerinaBackend = JBallerinaBackend.from(packageCompilation, JvmTarget.JAVA_17);
+        JBallerinaBackend jBallerinaBackend = JBallerinaBackend.from(packageCompilation, JvmTarget.JAVA_21);
         jBallerinaBackend.emit(JBallerinaBackend.OutputType.BALA, target.getBalaPath());
 
         // invoke write bala method
@@ -342,7 +341,7 @@ public class TestBalaWriter {
         // module sources
         Path defaultModuleSrcPath = balaExportPath.resolve("modules").resolve("winery");
         Assert.assertTrue(defaultModuleSrcPath.toFile().exists());
-        Assert.assertTrue(defaultModuleSrcPath.resolve(Paths.get("main.bal")).toFile().exists());
+        Assert.assertTrue(defaultModuleSrcPath.resolve(Path.of("main.bal")).toFile().exists());
     }
 
     @Test
@@ -360,12 +359,12 @@ public class TestBalaWriter {
         Target target = new Target(project.sourceRoot());
         Path balaPath = target.getBalaPath();
         // invoke write bala method
-        JBallerinaBackend jBallerinaBackend = JBallerinaBackend.from(packageCompilation, JvmTarget.JAVA_17);
+        JBallerinaBackend jBallerinaBackend = JBallerinaBackend.from(packageCompilation, JvmTarget.JAVA_21);
         EmitResult emitResult = jBallerinaBackend.emit(JBallerinaBackend.OutputType.BALA, balaPath);
         Assert.assertTrue(emitResult.successful());
 
         // unzip bala
-        TestUtils.unzip(String.valueOf(balaPath.resolve("foo-pkg_a-java17-1.0.0.bala")),
+        TestUtils.unzip(String.valueOf(balaPath.resolve("foo-pkg_a-java21-1.0.0.bala")),
                 String.valueOf(balaExportPath));
 
         // package.json
@@ -373,7 +372,7 @@ public class TestBalaWriter {
         Assert.assertTrue(packageJsonPath.toFile().exists());
         try (FileReader reader = new FileReader(String.valueOf(packageJsonPath))) {
             PackageJson packageJson = gson.fromJson(reader, PackageJson.class);
-            Assert.assertEquals(packageJson.getPlatform(), "java17");
+            Assert.assertEquals(packageJson.getPlatform(), JvmTarget.JAVA_21.code());
             JsonObject foundInBala = packageJson.getPlatformDependencies().get(0).getAsJsonObject();
             JsonObject expected = new JsonObject();
             expected.addProperty("artifactId", "project1");
@@ -384,7 +383,7 @@ public class TestBalaWriter {
             Assert.assertEquals(foundInBala, expected);
         }
         // Check if test scoped platform dependencies not exists
-        Path providedScopePlatformDependancy = balaExportPath.resolve("platform").resolve("java17")
+        Path providedScopePlatformDependancy = balaExportPath.resolve("platform").resolve(JvmTarget.JAVA_21.code())
                 .resolve("project1-1.0.0.jar");
         Assert.assertFalse(providedScopePlatformDependancy.toFile().exists());
     }
@@ -399,14 +398,14 @@ public class TestBalaWriter {
         PackageCompilation packageCompilation = project.currentPackage().getCompilation();
         Target target = new Target(project.sourceRoot());
 
-        JBallerinaBackend jBallerinaBackend = JBallerinaBackend.from(packageCompilation, JvmTarget.JAVA_17);
+        JBallerinaBackend jBallerinaBackend = JBallerinaBackend.from(packageCompilation, JvmTarget.JAVA_21);
         jBallerinaBackend.emit(JBallerinaBackend.OutputType.BALA, target.getBalaPath());
 
         // invoke write bala method
         jBallerinaBackend.emit(JBallerinaBackend.OutputType.BALA, target.getBalaPath());
 
         // unzip bala
-        TestUtils.unzip(String.valueOf(target.getBalaPath().resolve("foo-tool_test-java17-1.0.1.bala")),
+        TestUtils.unzip(String.valueOf(target.getBalaPath().resolve("foo-tool_test-java21-1.0.1.bala")),
                 String.valueOf(balaExportPath));
 
         // bala.json
@@ -441,7 +440,7 @@ public class TestBalaWriter {
         // module sources
         Path defaultModuleSrcPath = balaExportPath.resolve("modules").resolve("tool_test");
         Assert.assertTrue(defaultModuleSrcPath.toFile().exists());
-        Path mainFilePath = defaultModuleSrcPath.resolve(Paths.get("main.bal"));
+        Path mainFilePath = defaultModuleSrcPath.resolve(Path.of("main.bal"));
         Assert.assertTrue(mainFilePath.toFile().exists());
         String expectedMainContent = """
                 // AUTO-GENERATED FILE.
@@ -463,7 +462,7 @@ public class TestBalaWriter {
         PackageCompilation packageCompilation = project.currentPackage().getCompilation();
         Target target = new Target(project.sourceRoot());
         // invoke write bala method
-        JBallerinaBackend jBallerinaBackend = JBallerinaBackend.from(packageCompilation, JvmTarget.JAVA_17);
+        JBallerinaBackend jBallerinaBackend = JBallerinaBackend.from(packageCompilation, JvmTarget.JAVA_21);
         jBallerinaBackend.emit(JBallerinaBackend.OutputType.BALA, target.getBalaPath());
 
         // unzip bala
@@ -496,7 +495,7 @@ public class TestBalaWriter {
         // default module
         Path defaultModuleSrcPath = balaExportPath.resolve("modules").resolve("package_d");
         Assert.assertTrue(defaultModuleSrcPath.toFile().exists());
-        Assert.assertTrue(defaultModuleSrcPath.resolve(Paths.get("main.bal")).toFile().exists());
+        Assert.assertTrue(defaultModuleSrcPath.resolve(Path.of("main.bal")).toFile().exists());
 
         // dependencies.json
         Path dependencyGraphJsonPath = balaExportPath.resolve(DEPENDENCY_GRAPH_JSON);
@@ -538,11 +537,8 @@ public class TestBalaWriter {
         Project project = TestUtils.loadBuildProject(projectPath);
 
         PackageCompilation packageCompilation = project.currentPackage().getCompilation();
-        JBallerinaBackend jBallerinaBackend = JBallerinaBackend.from(packageCompilation, JvmTarget.JAVA_17);
+        JBallerinaBackend jBallerinaBackend = JBallerinaBackend.from(packageCompilation, JvmTarget.JAVA_21);
         jBallerinaBackend.emit(JBallerinaBackend.OutputType.BALA, balaPath);
-
-//        // invoke write bala method
-//        BalaWriter.write(project.currentPackage(), balaPath);
     }
 
     @Test(description = "tests build project with a valid icon in Ballerina.toml")
@@ -555,7 +551,7 @@ public class TestBalaWriter {
 
         Target target = new Target(buildProject.sourceRoot());
         // invoke write bala method
-        JBallerinaBackend jBallerinaBackend = JBallerinaBackend.from(compilation, JvmTarget.JAVA_17);
+        JBallerinaBackend jBallerinaBackend = JBallerinaBackend.from(compilation, JvmTarget.JAVA_21);
         jBallerinaBackend.emit(JBallerinaBackend.OutputType.BALA, target.getBalaPath());
 
         // Check whether there are any diagnostics
@@ -596,7 +592,7 @@ public class TestBalaWriter {
         Target target = new Target(buildProject.sourceRoot());
         Path balaPath = target.getBalaPath();
 
-        JBallerinaBackend jBallerinaBackend = JBallerinaBackend.from(packageCompilation, JvmTarget.JAVA_17);
+        JBallerinaBackend jBallerinaBackend = JBallerinaBackend.from(packageCompilation, JvmTarget.JAVA_21);
         EmitResult emitResult = jBallerinaBackend.emit(JBallerinaBackend.OutputType.BALA, balaPath);
         Assert.assertTrue(emitResult.successful());
 
