@@ -31,7 +31,6 @@ import java.io.Writer;
 import java.nio.charset.StandardCharsets;
 import java.nio.file.Files;
 import java.nio.file.Path;
-import java.nio.file.Paths;
 
 
 /***
@@ -41,7 +40,7 @@ import java.nio.file.Paths;
  */
 public class LogCodeModifierPkgPlugin extends CompilerPlugin {
 
-    private static final Path filePath = Paths.get("build/logs/log_creator_combined_plugin/compiler-plugin.txt")
+    private static final Path filePath = Path.of("build/logs/log_creator_combined_plugin/compiler-plugin.txt")
             .toAbsolutePath();
 
     @Override
