@@ -34,7 +34,6 @@ import org.testng.annotations.DataProvider;
 import org.testng.annotations.Test;
 
 import java.util.List;
-import java.util.stream.Collectors;
 
 import static io.ballerina.compiler.api.symbols.SymbolKind.RECORD_FIELD;
 import static io.ballerina.semantic.api.test.util.SemanticAPITestUtils.getDefaultModulesSemanticModel;
@@ -72,7 +71,7 @@ public class SymbolEquivalenceTest {
     public void testSymbols(List<LinePosition> positions) {
         List<Symbol> symbols = positions.stream()
                 .map(pos -> model.symbol(srcFile, pos).get())
-                .collect(Collectors.toList());
+                .toList();
         assertSymbols(symbols);
     }
 
@@ -113,7 +112,7 @@ public class SymbolEquivalenceTest {
         SemanticModel typeRefModel = SemanticAPITestUtils.getDefaultModulesSemanticModel("test-src/typedesc_test.bal");
         List<Symbol> symbols = positions.stream()
                 .map(pos -> typeRefModel.symbol(typesSrcFile, pos).get())
-                .collect(Collectors.toList());
+                .toList();
 
         assertSymbols(symbols);
     }
@@ -122,18 +121,13 @@ public class SymbolEquivalenceTest {
     public void testTypedescriptors(List<LinePosition> positions) {
         List<TypeSymbol> types = positions.stream()
                 .map(pos -> typesModel.symbol(typesSrcFile, pos).get())
-                .map(s -> {
-                    switch (s.kind()) {
-                        case RECORD_FIELD:
-                            return ((RecordFieldSymbol) s).typeDescriptor();
-                        case PARAMETER:
-                            return ((ParameterSymbol) s).typeDescriptor();
-                        case VARIABLE:
-                            return ((VariableSymbol) s).typeDescriptor();
-                    }
-                    throw new AssertionError("Unexpected symbol kind: " + s.kind());
+                .map(s -> switch (s.kind()) {
+                    case RECORD_FIELD -> ((RecordFieldSymbol) s).typeDescriptor();
+                    case PARAMETER -> ((ParameterSymbol) s).typeDescriptor();
+                    case VARIABLE -> ((VariableSymbol) s).typeDescriptor();
+                    default -> throw new AssertionError("Unexpected symbol kind: " + s.kind());
                 })
-                .collect(Collectors.toList());
+                .toList();
         assertTypeSymbols(types);
     }
 
