@@ -28,7 +28,7 @@ import org.testng.annotations.DataProvider;
 import org.testng.annotations.Test;
 
 import java.io.File;
-import java.nio.file.Paths;
+import java.nio.file.Path;
 import java.util.Map;
 
 import static io.ballerina.runtime.internal.configurable.providers.toml.TomlConstants.CONFIG_DATA_ENV_VARIABLE;
@@ -41,7 +41,7 @@ import static org.ballerinalang.test.context.LogLeecher.LeecherType.ERROR;
  */
 public class ConfigurableTest extends BaseTest {
 
-    private static final String testFileLocation = Paths.get("src", "test", "resources", "configurables")
+    private static final String testFileLocation = Path.of("src/test/resources/configurables")
             .toAbsolutePath().toString();
     private BMainInstance bMainInstance;
     private final String testsPassed = "Tests passed";
@@ -50,8 +50,8 @@ public class ConfigurableTest extends BaseTest {
     public void setup() throws BallerinaTestException {
         bMainInstance = new BMainInstance(balServer);
         // Build and push config Lib project.
-        bMainInstance.compilePackageAndPushToLocal(Paths.get(testFileLocation, "configLibProject").toString(),
-                "testOrg-configLib-java17-0.1.0");
+        bMainInstance.compilePackageAndPushToLocal(Path.of(testFileLocation, "configLibProject").toString(),
+                "testOrg-configLib-java21-0.1.0");
     }
 
     @Test
@@ -139,8 +139,8 @@ public class ConfigurableTest extends BaseTest {
     public void testFileEnvVariableBasedConfigurable() throws BallerinaTestException {
 
         // test config file location through `BAL_CONFIG_FILES` env variable
-        String configFilePaths = Paths.get(testFileLocation, "config_files", "Config-A.toml") +
-                File.pathSeparator + Paths.get(testFileLocation, "config_files", "Config-B.toml");
+        String configFilePaths = Path.of(testFileLocation, "config_files", "Config-A.toml") +
+                File.pathSeparator + Path.of(testFileLocation, "config_files", "Config-B.toml");
         executeBalCommand("", "envVarPkg",
                 addEnvironmentVariables(Map.ofEntries(Map.entry(CONFIG_FILES_ENV_VARIABLE, configFilePaths))));
     }
@@ -220,8 +220,8 @@ public class ConfigurableTest extends BaseTest {
     @Test
     public void testConfigOverriding() throws BallerinaTestException {
         // Check multiple cases of TOML values getting overridden
-        String configFilePath1 =  Paths.get(testFileLocation, "config_files", "Config.toml").toString();
-        String configFilePath2 =  Paths.get(testFileLocation, "config_files", "Config-override.toml").toString();
+        String configFilePath1 =  Path.of(testFileLocation, "config_files", "Config.toml").toString();
+        String configFilePath2 =  Path.of(testFileLocation, "config_files", "Config-override.toml").toString();
 
 
         // test config file overriding another config file
@@ -302,16 +302,16 @@ public class ConfigurableTest extends BaseTest {
                 "creates an ambiguity with module 'testOrg/subModuleClash.test:0.1.0'", ERROR);
         bMainInstance.runMain("pack", new String[]{}, null, new String[]{},
                 new LogLeecher[]{errorLog},
-                Paths.get(testFileLocation, "testAmbiguousCases", "subModuleClash").toString());
+                Path.of(testFileLocation, "testAmbiguousCases", "subModuleClash").toString());
         errorLog.waitForText(5000);
     }
 
     @Test
     public void testMapVariableAndModuleAmbiguityImportedModule() throws BallerinaTestException {
-        String projectPath = Paths.get(testFileLocation, "testAmbiguousCases").toString();
+        String projectPath = Path.of(testFileLocation, "testAmbiguousCases").toString();
         LogLeecher errorLog = new LogLeecher("[main.bal:(19:26,19:30)] configurable variable name 'test' creates an " +
                 "ambiguity with module 'testOrg/test:0.1.0'", ERROR);
-        bMainInstance.compilePackageAndPushToLocal(Paths.get(projectPath, "importedModuleClash", "test").toString(),
+        bMainInstance.compilePackageAndPushToLocal(Path.of(projectPath, "importedModuleClash", "test").toString(),
                 "testOrg-test-any-0.1.0");
         bMainInstance.runMain("pack", new String[]{"main"}, null, new String[]{},
                 new LogLeecher[]{errorLog}, projectPath + "/importedModuleClash");
@@ -324,7 +324,7 @@ public class ConfigurableTest extends BaseTest {
                 "ambiguity with module 'testOrg/multipleSubModuleClash.mod1.test:0.1.0'", ERROR);
         bMainInstance.runMain("pack", new String[]{}, null, new String[]{},
                 new LogLeecher[]{errorLog},
-                Paths.get(testFileLocation, "testAmbiguousCases", "multipleSubModuleClash").toString());
+                Path.of(testFileLocation, "testAmbiguousCases", "multipleSubModuleClash").toString());
         errorLog.waitForText(5000);
     }
 
@@ -414,7 +414,7 @@ public class ConfigurableTest extends BaseTest {
                 "with an imported organization name. Please provide the module name as '[ballerina.ballerina]'", ERROR);
         bMainInstance.runMain("run", new String[]{}, null, new String[]{},
                 new LogLeecher[]{errorLog},
-                Paths.get(testFileLocation, "testAmbiguousCases", "moduleNamedBallerina").toString());
+                Path.of(testFileLocation, "testAmbiguousCases", "moduleNamedBallerina").toString());
         errorLog.waitForText(5000);
     }
 
