@@ -19,17 +19,16 @@
 package org.ballerinalang.nativeimpl.jvm.tests;
 
 import io.ballerina.runtime.api.Environment;
-import io.ballerina.runtime.api.Future;
 import io.ballerina.runtime.api.Module;
-import io.ballerina.runtime.api.PredefinedTypes;
-import io.ballerina.runtime.api.TypeTags;
 import io.ballerina.runtime.api.creators.ErrorCreator;
 import io.ballerina.runtime.api.creators.TypeCreator;
 import io.ballerina.runtime.api.creators.ValueCreator;
 import io.ballerina.runtime.api.flags.SymbolFlags;
 import io.ballerina.runtime.api.types.Field;
+import io.ballerina.runtime.api.types.PredefinedTypes;
 import io.ballerina.runtime.api.types.RecordType;
 import io.ballerina.runtime.api.types.Type;
+import io.ballerina.runtime.api.types.TypeTags;
 import io.ballerina.runtime.api.utils.StringUtils;
 import io.ballerina.runtime.api.utils.TypeUtils;
 import io.ballerina.runtime.api.values.BArray;
@@ -72,6 +71,8 @@ import java.util.HashMap;
 import java.util.List;
 import java.util.Map;
 import java.util.UUID;
+import java.util.concurrent.CompletableFuture;
+import java.util.concurrent.ExecutionException;
 import java.util.concurrent.atomic.AtomicLong;
 
 /**
@@ -79,14 +80,15 @@ import java.util.concurrent.atomic.AtomicLong;
  *
  * @since 1.0.0
  */
-public class StaticMethods {
+@SuppressWarnings({"all"})
+public final class StaticMethods {
 
-    private static final BArrayType intArrayType = new BArrayType(PredefinedTypes.TYPE_INT);
-    private static final BArrayType jsonArrayType = new BArrayType(PredefinedTypes.TYPE_JSON);
-    private static final BTupleType tupleType = new BTupleType(
+    private static final BArrayType INT_ARRAY_TYPE = new BArrayType(PredefinedTypes.TYPE_INT);
+    private static final BArrayType JSON_ARRAY_TYPE = new BArrayType(PredefinedTypes.TYPE_JSON);
+    private static final BTupleType TUPLE_TYPE = new BTupleType(
             Arrays.asList(PredefinedTypes.TYPE_INT, PredefinedTypes.TYPE_FLOAT, PredefinedTypes.TYPE_STRING,
                           PredefinedTypes.TYPE_INT, PredefinedTypes.TYPE_STRING));
-    private static Module errorModule = new Module("testorg", "distinct_error.errors", "1");
+    private static final Module ERROR_MODULE = new Module("testorg", "distinct_error.errors", "1");
 
     private StaticMethods() {
     }
@@ -131,8 +133,8 @@ public class StaticMethods {
     }
 
     // This scenario is for map value to be passed to interop and return array value.
-    public static ArrayValue getArrayValueFromMap(BString key, MapValue mapValue) {
-        ArrayValue arrayValue = (ArrayValue) ValueCreator.createArrayValue(intArrayType);
+    public static ArrayValue getArrayValueFromMap(BString key, MapValue<?, ?> mapValue) {
+        ArrayValue arrayValue = (ArrayValue) ValueCreator.createArrayValue(INT_ARRAY_TYPE);
         arrayValue.add(0, 1);
         long fromMap = (long) mapValue.get(key);
         arrayValue.add(1, fromMap);
@@ -140,7 +142,7 @@ public class StaticMethods {
     }
 
     public static BMap<BString, Object> acceptRefTypesAndReturnMap(ObjectValue a, ArrayValue b, Object c,
-                                                                   ErrorValue d, Object e, Object f, MapValue g) {
+                                                                   ErrorValue d, Object e, Object f, MapValue<?, ?> g) {
         BMap<BString, Object> mapValue = ValueCreator.createMapValue();
         mapValue.put(StringUtils.fromString("a"), a);
         mapValue.put(StringUtils.fromString("b"), b);
@@ -161,33 +163,23 @@ public class StaticMethods {
     }
 
     public static Object acceptIntUnionReturn(int flag) {
-        switch (flag) {
-            case 1:
-                return 25;
-            case 2:
-                return StringUtils.fromString("sample value return");
-            case 3:
-                return 54.88;
-            case 4:
-                return null;
-            case 5:
-                return ValueCreator.createMapValue(TypeCreator.createMapType(PredefinedTypes.TYPE_ANYDATA));
-            default:
-                return true;
-        }
+        return switch (flag) {
+            case 1 -> 25;
+            case 2 -> StringUtils.fromString("sample value return");
+            case 3 -> 54.88;
+            case 4 -> null;
+            case 5 -> ValueCreator.createMapValue(TypeCreator.createMapType(PredefinedTypes.TYPE_ANYDATA));
+            default -> true;
+        };
     }
 
     public static Object acceptIntAnyReturn(int flag) {
-        switch (flag) {
-            case 1:
-                return 25;
-            case 2:
-                return "sample value return";
-            case 3:
-                return 54.88;
-            default:
-                return true;
-        }
+        return switch (flag) {
+            case 1 -> 25;
+            case 2 -> "sample value return";
+            case 3 -> 54.88;
+            default -> true;
+        };
     }
 
     public static Object acceptNothingInvalidAnydataReturn() {
@@ -205,7 +197,7 @@ public class StaticMethods {
         return ((Long) p.get(StringUtils.fromString("age"))).intValue();
     }
 
-    public static MapValue acceptRecordAndRecordReturn(MapValue e, BString newVal) {
+    public static MapValue<BString, Object> acceptRecordAndRecordReturn(MapValue<BString, Object> e, BString newVal) {
         e.put(StringUtils.fromString("name"), newVal);
         return e;
     }
@@ -284,9 +276,9 @@ public class StaticMethods {
         }
     }
 
-    public static ArrayValue getArrayValueFromMapWhichThrowsCheckedException(BString key, MapValue mapValue)
+    public static ArrayValue getArrayValueFromMapWhichThrowsCheckedException(BString key, MapValue<?, ?> mapValue)
             throws JavaInteropTestCheckedException {
-        ArrayValue arrayValue = (ArrayValue) ValueCreator.createArrayValue(intArrayType);
+        ArrayValue arrayValue = (ArrayValue) ValueCreator.createArrayValue(INT_ARRAY_TYPE);
         arrayValue.add(0, 1);
         long fromMap = mapValue.getIntValue(key);
         arrayValue.add(1, fromMap);
@@ -297,7 +289,7 @@ public class StaticMethods {
                                                                                               ArrayValue b, Object c,
                                                                                               ErrorValue d, Object e,
                                                                                               Object f,
-                                                                                              MapValue g)
+                                                                                              MapValue<?, ?> g)
             throws JavaInteropTestCheckedException {
         BMap<BString, Object> mapValue = ValueCreator.createMapValue();
         mapValue.put(StringUtils.fromString("a"), a);
@@ -330,7 +322,7 @@ public class StaticMethods {
         } else if (flag == 1) {
             BMap<BString, Object> errorDetails = ValueCreator.createMapValue();
             errorDetails.put(StringUtils.fromString("detail"), "detail error message");
-            return ErrorCreator.createError(errorModule, errorName.getValue(), StringUtils.fromString("error msg"),
+            return ErrorCreator.createError(ERROR_MODULE, errorName.getValue(), StringUtils.fromString("error msg"),
                     null, errorDetails);
         } else {
             return ErrorCreator.createError(StringUtils.fromString("Invalid data given"));
@@ -343,16 +335,12 @@ public class StaticMethods {
 
     public static Object acceptIntUnionReturnWhichThrowsCheckedException(int flag)
             throws JavaInteropTestCheckedException {
-        switch (flag) {
-            case 1:
-                return 25;
-            case 2:
-                return "sample value return";
-            case 3:
-                return 54.88;
-            default:
-                return true;
-        }
+        return switch (flag) {
+            case 1 -> 25;
+            case 2 -> "sample value return";
+            case 3 -> 54.88;
+            default -> true;
+        };
     }
 
     public static ObjectValue acceptObjectAndObjectReturnWhichThrowsCheckedException(ObjectValue p, int newVal)
@@ -361,21 +349,21 @@ public class StaticMethods {
         return p;
     }
 
-    public static MapValue acceptRecordAndRecordReturnWhichThrowsCheckedException(
+    public static MapValue<BString, Object> acceptRecordAndRecordReturnWhichThrowsCheckedException(
             MapValue<BString, Object> e, BString newVal) throws JavaInteropTestCheckedException {
         e.put(StringUtils.fromString("name"), newVal);
         return e;
     }
 
-    public static BMap getMapOrError(BString swaggerFilePath, MapValue apiDef)
+    public static BMap<BString, Object> getMapOrError(BString swaggerFilePath, MapValue<?, ?> apiDef)
             throws JavaInteropTestCheckedException {
         BString finalBasePath = StringUtils.fromString("basePath");
         AtomicLong runCount = new AtomicLong(0L);
         ArrayValue arrayValue = new ArrayValueImpl(new BArrayType(ValueCreator.createRecordValue(new Module(
                 "", "."), "ResourceDefinition").getType()));
-        BMap apiDefinitions = ValueCreator.createRecordValue(new Module("",
+        BMap<BString, Object> apiDefinitions = ValueCreator.createRecordValue(new Module("",
                                                                         "."), "ApiDefinition");
-        BMap resource = ValueCreator.createRecordValue(new Module("",
+        BMap<BString, Object> resource = ValueCreator.createRecordValue(new Module("",
                                                                   "."), "ResourceDefinition");
         resource.put(StringUtils.fromString("path"), finalBasePath);
         resource.put(StringUtils.fromString("method"), StringUtils.fromString("Method string"));
@@ -437,7 +425,7 @@ public class StaticMethods {
 
     public static TupleValueImpl mockedNativeFuncWithOptionalParams(long a, double b, String c,
                                                                     long d, String e) {
-        TupleValueImpl tuple = (TupleValueImpl) ValueCreator.createTupleValue(tupleType);
+        TupleValueImpl tuple = (TupleValueImpl) ValueCreator.createTupleValue(TUPLE_TYPE);
         tuple.add(0, Long.valueOf(a));
         tuple.add(1, Double.valueOf(b));
         tuple.add(2, (Object) c);
@@ -464,7 +452,7 @@ public class StaticMethods {
     }
 
     public static ArrayValue getJsonArray() {
-        ArrayValue array = (ArrayValue) ValueCreator.createArrayValue(jsonArrayType);
+        ArrayValue array = (ArrayValue) ValueCreator.createArrayValue(JSON_ARRAY_TYPE);
         array.add(0, (Object) StringUtils.fromString("John"));
         return array;
     }
@@ -515,7 +503,7 @@ public class StaticMethods {
             entries[index++] = new ListInitialValueEntry.ExpressionEntry(stringEntry.getValue());
         }
 
-        return new ArrayValueImpl(new BArrayType(new BUnionType(new ArrayList(2) {{
+        return new ArrayValueImpl(new BArrayType(new BUnionType(new ArrayList<>(2) {{
             add(PredefinedTypes.TYPE_INT);
             add(PredefinedTypes.TYPE_STRING);
         }}), length, true), entries);
@@ -529,39 +517,55 @@ public class StaticMethods {
         return obj;
     }
 
-    public static boolean echoImmutableRecordField(MapValue value, BString key) {
+    public static boolean echoImmutableRecordField(MapValue<?, ?> value, BString key) {
         return value.getBooleanValue(key);
     }
 
-    public static void addTwoNumbersSlowAsyncVoidSig(Environment env, long a, long b) {
-        Future balFuture = env.markAsync();
-        new Thread(() -> {
+    public static long addTwoNumbersSlowAsyncVoidSig(Environment env, long a, long b) {
+        CompletableFuture<Long> cf = new CompletableFuture<>();
+        Thread.startVirtualThread(() -> {
             sleep();
-            balFuture.complete(a + b);
-        }).start();
+            cf.complete(a + b);
+        });
+        try {
+            return cf.get();
+        } catch (InterruptedException | ExecutionException e) {
+            throw new RuntimeException(e);
+        }
     }
 
-    public static void addTwoNumbersFastAsyncVoidSig(Environment env, long a, long b) {
-        Future balFuture = env.markAsync();
-        balFuture.complete(a + b);
+    public static long addTwoNumbersFastAsyncVoidSig(Environment env, long a, long b) {
+        CompletableFuture<Long> cf = new CompletableFuture<>();
+        cf.complete(a + b);
+        try {
+            return cf.get();
+        } catch (InterruptedException | ExecutionException e) {
+            throw new RuntimeException(e);
+        }
     }
 
 
     public static long addTwoNumbersSlowAsync(Environment env, long a, long b) {
-        Future balFuture = env.markAsync();
-        new Thread(() -> {
+        CompletableFuture<Long> cf = new CompletableFuture<>();
+        Thread.startVirtualThread(() -> {
             sleep();
-            balFuture.complete(a + b);
-        }).start();
-
-        return -38263;
+            cf.complete(a + b);
+        });
+        try {
+            return cf.get();
+        } catch (InterruptedException | ExecutionException e) {
+            throw new RuntimeException(e);
+        }
     }
 
     public static long addTwoNumbersFastAsync(Environment env, long a, long b) {
-        Future balFuture = env.markAsync();
-        balFuture.complete(a + b);
-
-        return -282619;
+        CompletableFuture<Long> cf = new CompletableFuture<>();
+        cf.complete(a + b);
+        try {
+            return cf.get();
+        } catch (InterruptedException | ExecutionException e) {
+            throw new RuntimeException(e);
+        }
     }
 
     public static Object returnNullString(boolean nullVal) {
@@ -605,17 +609,14 @@ public class StaticMethods {
     public static Object acceptAndReturnReadOnly(Object value) {
         Type type = TypeUtils.getImpliedType(TypeChecker.getType(value));
 
-        switch (type.getTag()) {
-            case TypeTags.INT_TAG:
-                return 100L;
-            case TypeTags.ARRAY_TAG:
-            case TypeTags.OBJECT_TYPE_TAG:
-                return value;
-            case TypeTags.RECORD_TYPE_TAG:
-            case TypeTags.MAP_TAG:
-                return ((MapValue) value).get(StringUtils.fromString("first"));
-        }
-        return StringUtils.fromString("other");
+        return switch (type.getTag()) {
+            case TypeTags.INT_TAG -> 100L;
+            case TypeTags.ARRAY_TAG,
+                 TypeTags.OBJECT_TYPE_TAG -> value;
+            case TypeTags.RECORD_TYPE_TAG,
+                 TypeTags.MAP_TAG -> ((MapValue<?, ?>) value).get(StringUtils.fromString("first"));
+            default -> StringUtils.fromString("other");
+        };
     }
 
     public static void getNilAsReadOnly() {
@@ -669,11 +670,11 @@ public class StaticMethods {
         return list;
     }
 
-    public static MapValue getMappingAsReadOnly(MapValue mp) {
+    public static MapValue<?, ?> getMappingAsReadOnly(MapValue<?, ?> mp) {
         return mp;
     }
 
-    public static TableValue getTableAsReadOnly(TableValue tb) {
+    public static TableValue<?, ?> getTableAsReadOnly(TableValue<?, ?> tb) {
         return tb;
     }
 
@@ -795,26 +796,21 @@ public class StaticMethods {
         return StringUtils.fromString("getResourceTwo");
     }
 
-    public static void getStringWithBalEnv(Environment env) {
-        Future balFuture = env.markAsync();
-        BString output = StringUtils.fromString("Hello World!");
-        balFuture.complete(output);
+    public static BString getStringWithBalEnv(Environment env) {
+        return StringUtils.fromString("Hello World!");
     }
 
-    public static void getIntWithBalEnv(Environment env) {
-        Future balFuture = env.markAsync();
-        long output = 7;
-        balFuture.complete(output);
+    public static Object getIntWithBalEnv(Environment env) {
+        return 7;
     }
 
-    public static void getMapValueWithBalEnv(Environment env, BString name, long age,
+    public static BMap<BString, Object> getMapValueWithBalEnv(Environment env, BString name, long age,
                                              MapValue<BString, Object> results) {
-        Future balFuture = env.markAsync();
         BMap<BString, Object> output = ValueCreator.createMapValue();
         output.put(StringUtils.fromString("name"), name);
         output.put(StringUtils.fromString("age"), age);
         output.put(StringUtils.fromString("results"), results);
-        balFuture.complete(output);
+        return output;
     }
 
     public static BString testOverloadedMethods(Environment env, BArray arr, BString str) {
